# pydai

./: README.md  bewerter.py  duck_search.py  flight.py  koordinator.py  main.py  promptgenerator.py  pyproject.toml  result_type.py  search_test.py  test.py  website.py
